# youtube-insight

./: .gitignore  README.md  SKILL.md  pyproject.toml  setup.sh  wizard.py
youtube_insight/: __init__.py  densify.py  fetch.py  pipeline.py  transcribe.py
