[project]
name = "youtube-insight"
version = "1.0.0"
description = "YouTube транскрибация + выжимка сути через Whisper + DeepSeek V4"
authors = [{ name = "Mobiss11" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0",
    "httpx>=0.28.0",
    "certifi>=2024.0",
]

[project.scripts]
youtube-insight = "youtube_insight.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_insight"]
